2007-04-29  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Fix for initial
	  settings for drawing control characters.

2007-04-27  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Align white space 
	indicators with pixel grid, and interpolate their colour from BG and FG.

2007-04-27  David Makovský (Yakeen) <yakeen@sannyas-on.net>
	* EditorBindings.glade,
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	* MonoDevelop.SourceEditor.Properties/TextEditorProperties.cs,
	* MonoDevelop.SourceEditor.Gui.OptionPanels/MarkersTextEditorPanel.cs:
	  Fixed typo.

2007-04-26  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Added highlighting
	  current line functionality when gtksourceview supports it and
	  drawing of white spaces.
	* EditorBindings.glade: Configuraion checkboxes.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	* MonoDevelop.SourceEditor.Properties/TextEditorProperties.cs,
	* MonoDevelop.SourceEditor.Gui.OptionPanels/MarkersTextEditorPanel.cs:
	  HighlightCurrentLine and ShowContolCharacters confiuration properties.
	* Makefile.am,
	* MonoDevelop.SourceEditor.mdp: Added reference to Mono.Cairo.
	 
2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Register the editor after the
	  default display binding, so other bindings can be registered before
	  of it and have more priority when opening files.
	* MonoDevelop.SourceEditor.mdp: Updated.

2007-04-10  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Implement IViewHistory
	(BuildNavPoint() is no longer part of IViewHistory).

2007-04-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Don't try
	  to update the class combo after the editor has been disposed.